--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "api/server.js",
   "scripts": {
-    "dev": "node api/server.js"
+    "start": "node api/server.js"
   },
   "keywords": [],
   "author": "",
